@@ -71,6 +71,7 @@ documents those changes that are of interest to users and administrators.
  -- In route/topology validate the slurmctld doesn't try to initialize the
     node system.
  -- Fix issue when requesting invalid gres.
+ -- Fix salloc and missing SLURM_NTASKS.
 
 * Changes in Slurm 18.08.3
 ==========================
